trying to remove .idea

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ __pycache__/words.cpython-311.pyc
 .idea/misc.xml
 .idea/Beginner-Python-Projects.iml
 __pycache__/Hangman_Visual.cpython-311.pyc
+.idea/
